multiple demos, some restructuring, add progress bar class

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "autoload": {
         "psr-4": {
             "Phpqt\\PhpqtDemo\\": "src/",
-            "Qt\\": "phpqt/"
+            "Qt\\": "phpqt/",
+            "App\\": "examples"
         }
     },
     "authors": [
